--- a/src/components/Navigation/Navigation.scss
+++ b/src/components/Navigation/Navigation.scss
@@ -13,6 +13,7 @@
 	z-index: 1000;
 	left: 0;
 	padding: 0 15%;
+	background-color: var(--white);
 	.navigation-container {
 		width: 100%;
 		display: flex;
