--- a/src/app/[id]/styles.module.scss
+++ b/src/app/[id]/styles.module.scss
@@ -30,6 +30,8 @@
 			margin: 0 10px 0 0;
 			padding: 10px;
 			color: black;
+			overflow: scroll;
+			font-size: 18px;
 		}
 		.artificalInt{
 			width: 50%;
@@ -37,6 +39,9 @@
 			background-color: var(--pearl);
 			border-radius: 15px;
 			padding: 10px;
+			overflow: scroll;
+			color: var(--dark-gold);
+			font-size: 18px;
 		}
 	}
 }
