fix & addons: storage fix

--- a/src/app/[id]/styles.module.scss
+++ b/src/app/[id]/styles.module.scss
@@ -33,15 +33,48 @@
 			overflow: scroll;
 			font-size: 18px;
 		}
-		.artificalInt{
+		.artificalIntContainer
+		{
 			width: 50%;
 			height: 100%;
 			background-color: var(--pearl);
 			border-radius: 15px;
 			padding: 10px;
-			overflow: scroll;
 			color: var(--dark-gold);
 			font-size: 18px;
+			.artificalIntText{
+				height: 80%;
+				overflow: scroll;
+			}
+			.artificalIntControl{
+				color: white;
+				min-height: 20%;
+				height: 20%;
+				min-width: 100%;
+				padding: 10px;
+				background-color: var(--dark-gold);
+				border-radius: 15px;
+				@include items-center;
+				flex-direction: row;
+				>*{
+					border-radius: 15px;
+				}
+				.intControlSubmit{
+					height: 100%;
+					width: 33%;
+					background-color: green;
+				}
+				.intControlDecline{
+					height: 100%;
+					width: 33%;
+					background-color: red;
+				}
+				.intControlRegenerate{
+					height: 100%;
+					width: 33%;
+					background-color: var(--pearl);
+				}
+			}
 		}
 	}
 }
