addons : news page was added

--- a/src/app/[id]/ReadingStage/styles.module.scss
+++ b/src/app/[id]/ReadingStage/styles.module.scss
@@ -32,6 +32,8 @@
 			color: black;
 			overflow: scroll;
 			font-size: 18px;
+			//filter: blur(5px);
+			white-space: pre-wrap;
 		}
 		.artificalIntContainer
 		{
