--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -82,9 +82,10 @@ h6 {
 	--gold: rgb(190, 166, 116);
 	--white: white;
 	--black: black;
-	--dark-gold: rgb(126, 111, 77);
+	--dark-gold: #92722A;
 	--gold-start: rgb(205, 181, 117);
 	--gold-end:  rgb(183,160,117);
+	--gold-text: #7C5E24;
 	--pearl: #E2DFD2;
 }
 
