--- a/src/components/Navigation/NavigationButton/NavigationButton.scss
+++ b/src/components/Navigation/NavigationButton/NavigationButton.scss
@@ -10,7 +10,7 @@
 	font-size: 23px;
 
 	border: 1px solid var(--gold);
-	color: var(--dark-gold);
+	color: var(--gold-text);
 	padding: 10px;
 	transition-duration: 0.5s;
 	background-color: var(--white);
