--- a/src/app/[id]/styles.module.scss
+++ b/src/app/[id]/styles.module.scss
@@ -43,13 +43,13 @@
 			color: var(--dark-gold);
 			font-size: 18px;
 			.artificalIntText{
-				height: 80%;
+				//height: 80%;
 				overflow: scroll;
 			}
 			.artificalIntControl{
 				color: white;
-				min-height: 20%;
-				height: 20%;
+				//min-height: 20%;
+				height: 75px;
 				min-width: 100%;
 				padding: 10px;
 				background-color: var(--dark-gold);
