--- a/src/app/[id]/ReadingStage/styles.module.scss
+++ b/src/app/[id]/ReadingStage/styles.module.scss
@@ -7,7 +7,7 @@
 	border-radius: 15px;
 	padding: 10px;
 
-	background-color: var(--dark-gold);
+	@include gold-gradient;
 	@include items-center;
 	flex-direction: column;
 	.projectTitle{
@@ -44,32 +44,54 @@
 			padding: 10px;
 			color: var(--dark-gold);
 			font-size: 18px;
+			display: flex;
+			align-items: center;
+			flex-direction: column;
+			justify-content: space-between;
+			.artificalIntTitle{
+				@include gold-gradient;
+				padding: 10px;
+				border-radius: 15px;
+				color: var(--pearl);
+			}
 			.artificalIntText{
 				height: 80%;
 				overflow: scroll;
 			}
 			.artificalIntControl{
 				color: white;
-				min-height: 20%;
-				height: 20%;
+				height: 75px;
 				min-width: 100%;
 				padding: 10px;
-				background-color: var(--dark-gold);
+				@include gold-gradient;
 				border-radius: 15px;
 				@include items-center;
 				flex-direction: row;
 				>*{
 					border-radius: 15px;
+					margin-right: 10px;
 				}
 				.intControlSubmit{
 					height: 100%;
 					width: 33%;
-					background-color: green;
+					background-color: #E4F4E7;
+					color: #3F8E50;
+					border: 1px solid #3F8E50;
+					transition-duration: 0.3s;
+					&:hover{
+						box-shadow: 0 0 20px 5px #3F8E50;
+					}
 				}
 				.intControlDecline{
 					height: 100%;
 					width: 33%;
-					background-color: red;
+					background-color: #FDE4E3;
+					color: #D83731;
+					border: 1px solid #D83731;
+					transition-duration: 0.3s;
+					&:hover{
+						box-shadow: 0 0 20px 5px #D83731;
+					}
 				}
 				.intControlRegenerate{
 					height: 100%;
