--- a/src/app/[id]/ReadingStage/styles.module.scss
+++ b/src/app/[id]/ReadingStage/styles.module.scss
@@ -2,8 +2,8 @@
 
 .projectPage{
 	width: 100%;
-	height: 100%;
-	height: 800px;
+	//height: 100%;
+	//height: 800px;
 	border-radius: 15px;
 	padding: 10px;
 
@@ -18,13 +18,14 @@
 		margin:  0 0 10px 0;
 	}
 	.projectContainer{
-		height: 95%;
+		//height: 95%;
+		margin-bottom: 20px;
 		width: 100%;
 		@include items-center;
 		flex-direction: row;
 		.projectDescription{
 			width: 50%;
-			height: 100%;
+			height: 800px;
 			background-color: var(--white);
 			border-radius: 15px;
 			margin: 0 10px 0 0;
@@ -38,7 +39,7 @@
 		.artificalIntContainer
 		{
 			width: 50%;
-			height: 100%;
+			height: 800px;
 			background-color: var(--pearl);
 			border-radius: 15px;
 			padding: 10px;
@@ -100,5 +101,11 @@
 				}
 			}
 		}
+	}
+	.checkList{
+		width: 100%;
+		height: 600px;
+		background-color: var(--dark-gold);
+		border-radius: 15px;
 	}
 }
