--- a/src/app/[id]/ReadingStage/styles.module.scss
+++ b/src/app/[id]/ReadingStage/styles.module.scss
@@ -1,6 +1,6 @@
 @import "/src/mixins/mixin.scss";
 
-.projectPage{
+.projectPage {
 	width: 100%;
 	//height: 100%;
 	//height: 800px;
@@ -10,20 +10,20 @@
 	@include gold-gradient;
 	@include items-center;
 	flex-direction: column;
-	.projectTitle{
+	.projectTitle {
 		height: 5%;
 		width: 100%;
 		@include items-center;
 		font-size: 22px;
-		margin:  0 0 10px 0;
+		margin: 0 0 10px 0;
 	}
-	.projectContainer{
+	.projectContainer {
 		//height: 95%;
 		margin-bottom: 20px;
 		width: 100%;
 		@include items-center;
 		flex-direction: row;
-		.projectDescription{
+		.projectDescription {
 			width: 50%;
 			height: 800px;
 			background-color: var(--white);
@@ -36,8 +36,7 @@
 			//filter: blur(5px);
 			white-space: pre-wrap;
 		}
-		.artificalIntContainer
-		{
+		.artificalIntContainer {
 			width: 50%;
 			height: 800px;
 			background-color: var(--pearl);
@@ -49,17 +48,17 @@
 			align-items: center;
 			flex-direction: column;
 			justify-content: space-between;
-			.artificalIntTitle{
+			.artificalIntTitle {
 				@include gold-gradient;
 				padding: 10px;
 				border-radius: 15px;
 				color: var(--pearl);
 			}
-			.artificalIntText{
+			.artificalIntText {
 				height: 80%;
 				overflow: scroll;
 			}
-			.artificalIntControl{
+			.artificalIntControl {
 				color: white;
 				height: 75px;
 				min-width: 100%;
@@ -68,44 +67,44 @@
 				border-radius: 15px;
 				@include items-center;
 				flex-direction: row;
-				>*{
+				> * {
 					border-radius: 15px;
 					margin-right: 10px;
 				}
-				.intControlSubmit{
+				.intControlSubmit {
 					height: 100%;
 					width: 33%;
-					background-color: #E4F4E7;
-					color: #3F8E50;
-					border: 1px solid #3F8E50;
+					background-color: #e4f4e7;
+					color: #3f8e50;
+					border: 1px solid #3f8e50;
 					transition-duration: 0.3s;
-					&:hover{
-						box-shadow: 0 0 20px 5px #3F8E50;
+					padding: 10px;
+					&:hover {
+						box-shadow: 0 0 20px 5px #3f8e50;
+						background-color: #3f8e50;
+						color: white;
 					}
 				}
-				.intControlDecline{
+				.intControlDecline {
 					height: 100%;
 					width: 33%;
-					background-color: #FDE4E3;
-					color: #D83731;
-					border: 1px solid #D83731;
+					background-color: #fde4e3;
+					color: #d83731;
+					border: 1px solid #d83731;
+					padding: 10px;
 					transition-duration: 0.3s;
-					&:hover{
-						box-shadow: 0 0 20px 5px #D83731;
+					&:hover {
+						box-shadow: 0 0 20px 5px #d83731;
+						background-color: #d83731;
+						color: white;
 					}
 				}
-				.intControlRegenerate{
+				.intControlRegenerate {
 					height: 100%;
 					width: 33%;
 					background-color: var(--pearl);
 				}
 			}
 		}
-	}
-	.checkList{
-		width: 100%;
-		height: 600px;
-		background-color: var(--dark-gold);
-		border-radius: 15px;
 	}
 }
