--- a/src/components/NewsPageBlock/NewsPageBlock.scss
+++ b/src/components/NewsPageBlock/NewsPageBlock.scss
@@ -18,4 +18,10 @@
 			width: 50px;
 		}
 	}
+	transition-duration: 0.3s;
+	box-shadow: none;
+	cursor: pointer;
+	&:hover{
+		box-shadow: 0 0 15px 5px var(--dark-gold);
+	}
 }
