minor fix: text color

--- a/src/app/[id]/ReadingStage/CheckList/styles.module.scss
+++ b/src/app/[id]/ReadingStage/CheckList/styles.module.scss
@@ -24,7 +24,7 @@
 			align-items: start;
 			flex-direction: column;
 			justify-content: flex-start;
-			color: var(--dark-gold);
+			color: var(--white);
 			font-size: 20px;
 			@include gold-gradient;
 			padding: 10px;
